[gd_scene load_steps=2 format=3 uid="uid://duu8sr6vtbb1o"]

[ext_resource type="Script" path="res://scripts/game_over.gd" id="1_8jkt3"]

[node name="GameOverScene" type="Node2D"]
script = ExtResource("1_8jkt3")

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="GameOverUI" type="Control" parent="UILayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundPanel" type="Panel" parent="UILayer/GameOverUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverText" type="Label" parent="UILayer/GameOverUI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -417.0
offset_top = 64.0
offset_right = 417.0
offset_bottom = 239.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 128
text = "Vanquished..."

[node name="GameOverDetail" type="Label" parent="UILayer/GameOverUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "You were defeated by:"

[node name="RestartButton" type="Button" parent="UILayer/GameOverUI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -43.5
offset_top = -95.0
offset_right = 43.5
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 64
text = "Try again?"

[connection signal="pressed" from="UILayer/GameOverUI/RestartButton" to="." method="_on_restart_button_pressed"]
